tests/machine/x/st/string_concat.out
Object: 'hello ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/string_concat.st:1)