tests/machine/x/st/string_concat.st
Transcript show: (('hello ' + 'world')) printString; cr.
